--- a/static/index.html
+++ b/static/index.html
@@ -131,9 +131,9 @@
         function createPC() {
 
             config = new Array();
-            config.push({
-                url: 'stun:stun.ideasip.com'
-            })
+            // config.push({
+            //     url: 'stun:stun.ideasip.com'
+            // })
             config.push({
                 url: 'stun:stun.voipgate.com:3478'
             })
