--- a/static/broadcast.html
+++ b/static/broadcast.html
@@ -35,6 +35,7 @@
             weWaited = false,
             video1Stream, video1,
             video2Stream, video2,
+            poll_cand_timer,
             doNothing = function () { },
             pc,
             constraints = {
@@ -55,10 +56,10 @@
                 uid: randUid
             }
 
-            $.post('/getAnswer',
+            $.post('/sendOfferChan',
                 req,
                 function (data, status) {
-                    
+
                     if (data) {
                         console.log("get answer " + status + data.length);
                         var answer = {
@@ -66,6 +67,7 @@
                             type: "answer"
                         }
                         pc.setRemoteDescription(new RTCSessionDescription(answer))
+                        poll_cand_timer = setInterval("poll_candidate()", 1000)
                     }
                 });
 
@@ -83,12 +85,28 @@
             //     post('/sendCandidate', req);
             // }
             var req = {
-                    "uid": randUid,
-                    "candidate": cand
-                }
-                console.log(cand)
-                post('/sendCandidate', req);
+                "uid": randUid,
+                "candidate": cand
+            }
+            console.log(cand)
+            post('/sendCandChan', req);
 
+        }
+
+        function poll_candidate() {
+            $.get("/pollCandChan", function (data, status) {
+                if (data && pc.iceConnectionState != "connected") {
+                    var cand = {
+                        candidate: data.candidate,
+                        sdpMid: data.sdpMid,
+                        sdpMLineIndex: data.sdpMLineIndex,
+                    }
+                    pc.addIceCandidate(new RTCIceCandidate(cand));
+                } else {
+                    clearInterval(poll_cand_timer)
+                }
+
+            })
         }
 
         function post(r, opt) {
@@ -141,10 +159,10 @@
             })
             pc.onicecandidate = onIceCandidate
             // pc.onaddstream = onRemoteStreamAdded
-            pc.ontrack = function(e){
+            pc.ontrack = function (e) {
                 var el = document.getElementById("video2")
                 el.srcObject = e.streams[0]
-                el.autoplay=true
+                el.autoplay = true
             }
 
             // 等待媒体就绪
@@ -227,7 +245,7 @@
 
     <p id="uid"></p>
     <video id="video1" width="160" height="120" autoplay muted></video> <br />
-    <video id="video2" width="160" height="120", autoplay muted></video> <br />
+    <video id="video2" width="160" height="120" , autoplay muted></video> <br />
     <button id="pub" onclick="pub()"> Publish a Broadcast </button>
     <button id="sub" onclick="sub()"> Join a Broadcast </button><br />
 
