--- a/static/index.html
+++ b/static/index.html
@@ -240,7 +240,7 @@
                     "candidate": e.candidate.candidate
                 }
                 if (cands.length == 0) {
-                    // setTimeout("send_candidate()", "4000");
+                    setTimeout("send_candidate()", "4000");
                 }
                 cands.push(cand)
 
