--- a/static/index.html
+++ b/static/index.html
@@ -192,7 +192,10 @@
                 return
             }
             navigator.mediaDevices.getDisplayMedia({
-                video: true
+                video: {
+                    width: 1280,
+                    height: 720,
+                }
             }).then(stream => {
                 addLocalSteam(stream)
                 if (pc) {
